fixed navbar alignment

--- a/css/main.css
+++ b/css/main.css
@@ -336,6 +336,19 @@ a:link, a:visited, a:hover, a:active{
   color: black;
   text-decoration: none;
 }
+/* a:link::after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 1px;
+  background: #000;
+  transition: width 500ms;
+  margin: 10px auto;
+}
+a:hover::after{
+  width: 100%;
+} */
+
 .brands a:link,
 .brands a:visited,
 .brands a:hover,
@@ -428,6 +441,7 @@ img.mockup{
   /* text-align: center; */
 }
 .navbar ul{
+  margin-top: 3px;
   float: right;
 }
 .bottom-nav{
